实现曲线的画中画视频

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -292,26 +292,7 @@
                         <div class="shishi_right">
                             <div class="item" style="display: none">
                                 <div class="video_box">
-                                    <div class="video_4x4">
-                                        <div id="video01"></div>
-                                        <div id="video02"></div>
-                                        <div id="video03"></div>
-                                        <div id="video04"></div>
-                                        <div id="video05"></div>
-                                        <div id="video06"></div>
-                                        <div id="video07"></div>
-                                        <div id="video08"></div>
-                                        <div id="video09"></div>
-                                        <div id="video10"></div>
-                                        <div id="video11"></div>
-                                        <div id="video12"></div>
-                                        <div id="video13"></div>
-                                        <div id="video14"></div>
-                                        <div id="video15"></div>
-                                        <div id="video16"></div>
-                                        <div id="video17"></div>
-                                        <div id="video18"></div>
-                                    </div>
+                                    <div class="video_4x4"></div>
                                 </div>
                             </div>
                             <div class="item shishi_right_show">
@@ -335,6 +316,10 @@
                                     <ul id="legend_ul">
                                     </ul>
                                 </div>
+                                <div class="smallVideoBox">
+                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
+                                    <div id="smallVideoInland"></div>
+                                </div>
                             </div>
                         </div>
 
@@ -352,26 +337,9 @@
                         </div>
                         <div class="shishi_right shishi_right_show">
                             <div class="item" hidden>
-<!--
-                                <div class="video_box video_4x4">
-                                    <div id="video01"></div>
-                                    <div id="video02"></div>
-                                    <div id="video03"></div>
-                                    <div id="video04"></div>
-                                    <div id="video05"></div>
-                                    <div id="video06"></div>
-                                    <div id="video07"></div>
-                                    <div id="video08"></div>
-                                    <div id="video09"></div>
-                                    <div id="video10"></div>
-                                    <div id="video11"></div>
-                                    <div id="video12"></div>
-                                    <div id="video13"></div>
-                                    <div id="video14"></div>
-                                    <div id="video15"></div>
-                                    <div id="video16"></div>
+                                <div class="video_box">
+                                    <div class="video_4x4"></div>
                                 </div>
--->
                             </div>
                             <div class="item">
                                 <div class='sheshi_right_top'>
@@ -394,13 +362,17 @@
                                     <ul id="legend_ul_world">
                                     </ul>
                                 </div>
+                                <div class="smallVideoBox">
+                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
+                                    <div id="smallVideoAbroad"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!--嵌入模块商互联界面-->
                 <div class="item ">
-                    <iframe src="http://e-art.taobao.com" frameborder="0"></iframe>
+                    <iframe src="http://baidu.com" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
