--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -250,7 +250,7 @@ li:not(.hasChildren).active {
 /*视频监控页面*/
 .monitoring .video_box {
     padding: 1em;
-    height: 43em;
+    height: 45em;
     overflow: auto;
 }
 
@@ -280,8 +280,26 @@ li:not(.hasChildren).active {
     height: 42em;
 }
 
-
-
-
-
-
+.monitoring .shishi_right .smallVideoBox{
+    position: absolute;
+    width: 24em;
+    height: 13.5em;
+    right: 0;
+}
+.monitoring .shishi_right .smallVideoBox>.hideShow{
+    text-align: right;
+    width: 8em;
+    float: right;
+    padding-bottom: .2em;
+    cursor: pointer;
+}
+.monitoring .shishi_right .smallVideoBox>.hideShow>.icon{
+    position: relative;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    top: .3em;
+    margin: 0 .5em;
+    background-image: url(../img/lab/close.png);
+    background-size: contain;
+}
