--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -11,9 +11,10 @@
                 <div class="rename-ppm">ppm</div>
                 <div id="myChart14"></div>
                 <div class="shujuWajue_left_top_list">
-                    <div>模块商名称：</div>
+                    <!--<div>模块商名称：</div>-->
                     <form action="">
-                        <select name="请选择" onchange="tab4JianSelected(this)">
+                        <label for="type" style="margin-left: 2.4em">模块商名称：</label>
+                        <select id="type" name="请选择" onchange="tab4JianSelected(this)">
                             <option class="showLabel" style="display: none">常州福兰德电器</option>
                             ##for(p in providerDic){
                             <optgroup class="main main${p.id!}" label=${p.name!}>
@@ -27,6 +28,13 @@
                             </optgroup>
 
                             ##}
+                        </select>
+                        <label for="station" style="margin-left: 1em">工位：</label>
+                        <select id="station" name="请选择" onchange="tab4JianSelected(this)">
+                            <option class="showLabel">工位1</option>
+                            <option class="showLabel">工位2</option>
+                            <option class="showLabel">工位3</option>
+
                         </select>
                     </form>
 
