--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -143,7 +143,6 @@
                     </div>
                 </div>
             </div>
-            <div class="toLabData"><a href="${contextPath!}/lab/full?toLabData"> 打开实验室数据中心 &gt;&gt;</a></div>
             <!--平面地图下面的导航-->
             <div class="flat-footer controlBar" style="z-index:999">
                 <div class="legend">
@@ -183,6 +182,7 @@
                     -->
                 </div>
             </div>
+            <div class="toLabData"><a href="${contextPath!}/lab/full?toLabData"> 进入实验室 <span>&gt;&gt;</span></a></div>
         </div>
     </div>
 </div>
