--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -146,7 +146,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="toLabData">打开实验室数据中心 &gt;&gt;</div>
                 <!--平面地图下面的导航-->
                 <div class="flat-footer controlBar" style="z-index:9999">
                     <div class="legend">
@@ -185,6 +184,7 @@
 -->
                     </div>
                 </div>
+                <div class="toLabData">进入实验室 <span>&gt;&gt;</span></div>
             </div>
 
         </div>
