--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -122,12 +122,16 @@
     width: 100%;
     left: 41%;
 }
+#l.fullScreen_map .toLabData{
+    padding: .5em 5em .4em;
+    bottom:2%;
+}
 #l.fullScreen_map .flat-footer .legend{
     z-index: 9999;
     font-size: .9em;
     width: 22%;
     height: 41%;
-    top: 46%;
+    top: 30%;
     background-image: url(../img/nav-border_noBottom.png);
 }
 #l.fullScreen_map .flat-footer .legend .labLine {
