加入海尔智能家居

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -372,7 +372,7 @@
                 </div>
                 <!--嵌入模块商互联界面-->
                 <div class="item ">
-                    <iframe src="http://baidu.com" frameborder="0"></iframe>
+                    <iframe src="http://10.130.96.107:8080/xtest/toshow.jsp?token=QAZXC-PLMNB" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
