--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -110,15 +110,13 @@
     width: 33%;
     margin: 0 auto;
 }
-#l.fullScreen_map .flat .mapArea iframe {
-    /*top: 2%;*/
-}
+
 #l.fullScreen_map .sphere .chartBorder h4.noBG {
     margin-top: -11%;
 }
 
 #l.fullScreen_map .flat .mapArea iframe {
-    height: 142%;
+    height: 130%;
     width: 100%;
     left: 41%;
 }
@@ -126,6 +124,10 @@
     padding: .5em 5em .4em;
     bottom:2%;
 }
+#l.fullScreen_map .toLabData>a{
+    color: #6cf;
+}
+
 #l.fullScreen_map .flat-footer .legend{
     z-index: 9999;
     font-size: .9em;
