--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -293,6 +293,26 @@
                             <div class="item" style="display: none">
                                 <div class="video_box">
                                     <div class="video_4x4"></div>
+                                    <div style="display: none;
+                                                position: absolute;
+                                                width: 96%;
+                                                height: 94%;
+                                                left: 2%;
+                                                top: 1%; ">
+                                        <button id="floatVideoBox" class="btn btn-default" style="
+                                            right: .2em;
+                                            top: .2em;
+                                            position: absolute;
+                                            background: transparent;
+                                            border: .15em solid #777;
+                                            color: #777;
+                                            font-size: 1.5em;
+                                            font-weight: bold;">返回</button>
+                                        <div id="floatVideo" style=" height: 100%;   ">
+
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="item shishi_right_show">
