--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -69,7 +69,7 @@
                     <li class="analysis">数据分析</li>
                     <li class="centerCurves">实时监测（中）</li>
                     <li class="abroadCurves" style="display: none">实时监测（外）</li>
-                    <li class="moduleMakers" style="display: none">数据互联</li>
+                    <li class="moduleMakers" style="display: none">实时数据</li>
                 </ul>
             </nav>
             <div class="switchBox">
@@ -283,7 +283,7 @@
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
                             <div class="sheshi_tab">视频监控</div>
-                            <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">曲线监控</div>
+                            <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center">
                                 </ul>
@@ -330,7 +330,7 @@
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
                             <div class="sheshi_tab">视频监控</div>
-                            <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">曲线监控</div>
+                            <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center_world"></ul>
                             </div>
