--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -23,7 +23,7 @@
     }
 
     .lab_content_l {
-        flex: .9;
+        flex: .7;
     }
 
     .lab_content_r {
@@ -154,7 +154,7 @@ li:not(.hasChildren).active {
 
     .labMainNav > .switchBox > ul > li > header {
         display: inline-block;
-        width: 90%;
+        /*width: 90%;*/
         padding: .6em 0;
     }
 
@@ -214,7 +214,7 @@ li:not(.hasChildren).active {
     .labSubNav > ul > li {
         display: inline-block;
         text-align: center;
-        width: 10em;
+        width: 10.5em;
         padding: .75em 0;
         font-size: 1.6em;
         color: #fff;
@@ -284,6 +284,7 @@ li:not(.hasChildren).active {
     position: absolute;
     width: 24em;
     height: 13.5em;
+    top: 2em;
     right: 0;
 }
 .monitoring .shishi_right .smallVideoBox>.hideShow{
