--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -255,6 +255,7 @@
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center">
+                                    <li class="toLabIframe"><span></span><a href="javascript:void(0);">海尔家居</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -291,6 +292,13 @@
                                     <div id="smallVideoInland"></div>
                                 </div>
                             </div>
+                            <div class="item iframe" style="display: none">
+                                <div class="smallVideoBox">
+                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
+                                    <div id="smallVideoInlandWeb"></div>
+                                </div>
+                                <iframe src="http://10.130.96.107:8080/xtest/toshow.jsp?token=QAZXC-PLMNB"></iframe>
+                            </div>
                         </div>
 
                     </div>
@@ -302,7 +310,9 @@
                             <div class="sheshi_tab">视频监控</div>
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
-                                <ul id="lab_unit_selected_center_world"></ul>
+                                <ul id="lab_unit_selected_center_world">
+                                    <li>右侧网页测试</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="shishi_right shishi_right_show">
