增加实验室三级菜单

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -255,7 +255,34 @@
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center">
-                                    <li class="toLabIframe"><span></span><a href="javascript:void(0);">海尔家居</a></li>
+                                    <li class="toLabIframe">
+                                        <header>海尔家居</header>
+                                    </li>
+                                    <li>
+                                        <header>胶州空调一期模块<span>∧</span></header>
+                                        <ul>
+                                            <li>
+                                                <header>胶州实验室1<span>∧</span></header>
+                                                <ul class="taiwei_hide">
+                                                    <li class="active">台位1</li>
+                                                    <li>台位2</li>
+                                                    <li>台位3</li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <header>胶州实验室2<span>∧</span></header>
+                                                <ul class="taiwei_hide">
+                                                    <li>台位1</li>
+                                                    <li>台位2</li>
+                                                    <li>台位3</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
