--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -141,7 +141,8 @@ li:not(.hasChildren).active {
     }
 
     .labMainNav > .switchBox {
-        /*border: 1px dotted #64ccff;*/
+        height: 33em;
+        overflow: auto;
     }
 
     .labMainNav > .switchBox > ul {
@@ -155,14 +156,13 @@ li:not(.hasChildren).active {
 
     .labMainNav > .switchBox > ul > li > header {
         display: inline-block;
-        /*width: 90%;*/
+        width: 80%;
         padding: .6em 0;
     }
 
     .labMainNav > .switchBox > ul > li > header > span { /*折叠符号*/
-        position: relative;
-        padding-left: 8em;
-        top: -.2em;
+        position: absolute;
+        right: 4em;
     }
 
     .labMainNav > .switchBox > ul > li > header:hover > span {
@@ -170,7 +170,7 @@ li:not(.hasChildren).active {
     }
 
     .labMainNav > .switchBox > ul > li > header.fold > span {
-        top: -.2em;
+        /*top: -.2em;*/
     }
 
     .labMainNav > .switchBox > ul > li.noChildren:hover,
@@ -196,7 +196,7 @@ li:not(.hasChildren).active {
     }
 
     .labMainNav > .switchBox > ul > li {
-
+        position: relative;
     }
 
 }
