--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -255,7 +255,7 @@
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center">
-                                    <li class="toLabIframe">
+                                   <!--  <li class="toLabIframe">
                                         <header>海尔家居</header>
                                     </li>
                                     <li>
@@ -281,7 +281,7 @@
                                     </li>
                                     <li>
 
-                                    </li>
+                                    </li> -->
 
                                 </ul>
                             </div>
@@ -324,7 +324,7 @@
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoInlandWeb"></div>
                                 </div>
-                                <iframe src="http://10.130.96.107:8080/xtest/toshow.jsp?token=QAZXC-PLMNB"></iframe>
+                                <iframe id="lab_iframe_video" src=""></iframe>
                             </div>
                         </div>
 
@@ -374,6 +374,7 @@
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoAbroad"></div>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
