--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <!--中海博瑞视频监控和曲线-->
-                <div class="item monitoring">
+                <div class="item monitoring webSocket">
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
                             <div class="sheshi_tab">视频监控</div>
@@ -316,7 +316,7 @@
                             <div class="item iframe" style="display: none">
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideoInlandWeb"></div>
+                                    <div id="smallVideoWSWeb"></div>
                                 </div>
                                 <iframe id="lab_iframe_video" src=""></iframe>
                             </div>
@@ -325,7 +325,7 @@
                     </div>
                 </div>
                 <!--国外视频监控和曲线-->
-                <div class="item monitoring">
+                <div class="item monitoring world">
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
                             <div class="sheshi_tab">视频监控</div>
