视频加载动画制作中。。。

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -310,6 +310,7 @@
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoWS"></div>
+                                    <div class="videoWait">WS正在加载，请稍后。。。</div>
                                 </div>
                             </div>
                             <!--链接型实验室-->
@@ -317,6 +318,7 @@
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoWSWeb"></div>
+                                    <div class="videoWait">WEB正在加载，请稍后。。。</div>
                                 </div>
                                 <iframe id="lab_iframe_video" src=""></iframe>
                             </div>
@@ -364,8 +366,9 @@
                                     </ul>
                                 </div>
                                 <div class="smallVideoBox">
-                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
+                                    <div class="hideShow"><span class="text">点击隐藏...</span><span class="icon"></span></div>
                                     <div id="smallVideoWorld"></div>
+                                    <div class="videoWait">world正在加载，请稍后。。。</div>
                                 </div>
                                 
                             </div>
