页面显示型号

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -15,7 +15,7 @@
                     <form action="">
                         <label for="type" style="margin-left: 2.4em">模块商名称：</label>
                         <select id="type" name="请选择" onchange="tab4JianSelected(this)">
-                            <option class="showLabel" style="display: none">常州福兰德电器</option>
+                            <option class="showLabel" style="display: none">广州捷普电子</option>
                             ##for(p in providerDic){
                             <optgroup class="main main${p.id!}" label=${p.name!}>
                                 ##for(c in p.children){
