将lab.js中动作和视频相关的代码拆分出来

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -318,7 +318,7 @@
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoWSWeb"></div>
-                                    <div class="videoWait">WEB正在加载，请稍后。。。</div>
+                                    <div class="videoWait">正在连接到实时监控。。。</div>
                                 </div>
                                 <iframe id="lab_iframe_video" src=""></iframe>
                             </div>
@@ -339,7 +339,7 @@
                             </div>
                         </div>
                         <div class="shishi_right shishi_right_show">
-                            <div class="item" hidden>
+                            <div class="item video" hidden>
                                 <div class="bigVideoBox">
                                     <div id="bigVideoWorld"></div>
                                 </div>
@@ -387,4 +387,5 @@
 
 <script src="../static/js/centerLab.js"></script>
 <script src="../static/js/lab.js"></script>
+<script src="../static/js/labAction.js"></script>
 <script src="../static/asserts/video/swfobject.js?time=New Date()"></script>
