下拉选框的三角箭头随大屏放大

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -368,7 +368,7 @@
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏...</span><span class="icon"></span></div>
                                     <div id="smallVideoWorld"></div>
-                                    <div class="videoWait">world正在加载，请稍后。。。</div>
+                                    <div class="videoWait">world正在加载，请稍后</div>
                                 </div>
                                 
                             </div>
