--- a/src/main/webapp/static/phm/css/page2.css
+++ b/src/main/webapp/static/phm/css/page2.css
@@ -56,7 +56,7 @@
 	height:90%;
 	width:34.5%;
 	float:left;
-	background:url("../images/page2/压缩机故障.png") no-repeat center;
+	background:url("../images/page2/ysjgz.png") no-repeat center;
 	background-size: 100%  100%;
 	position:relative;
 	
@@ -105,7 +105,7 @@ table td {
 	width:16%;
 	height:90%;
 	margin-top:1%;
-	background:url("../images/page2/各区域.png") no-repeat center;
+	background:url("../images/page2/gqy.png") no-repeat center;
 	background-size: 100% 100%;
 	position: relative;
 }
